force-app/main/default/objects/Promotion_Activity__c/fields/Activity_Communication_Methods__c.field-meta.xml
<CustomField>
    <fullName>Activity_Communication_Methods__c</fullName>
    <label>Activity Communication Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catalogue</fullName>
            </value>
            <value>
                <fullName>Social Media - Brand</fullName>
            </value>
            <value>
                <fullName>In Store Theatre</fullName>
            </value>
            <value>
                <fullName>Gondola End Shelf</fullName>
            </value>
            <value>
                <fullName>Customer EDM</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Broad Reach Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Social Media - Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>