force-app/main/default/objects/Promotion_Activity__c/fields/Activity_Mechanic__c.field-meta.xml
<CustomField>
    <fullName>Activity_Mechanic__c</fullName>
    <label>Activity Mechanic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Gift Packs</fullName>
            </value>
            <value>
                <fullName>GWP</fullName>
            </value>
            <value>
                <fullName>Incentive Program</fullName>
            </value>
            <value>
                <fullName>Permanent Display</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Redemption Offer</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>WIN</fullName>
            </value>
            <value>
                <fullName>WIS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>