force-app/main/default/objects/Promotion_Activity__c/fields/Activity_Mechanic_Comments__c.field-meta.xml
<CustomField>
    <fullName>Activity_Mechanic_Comments__c</fullName>
    <label>Activity Mechanic Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>