force-app/main/default/objects/Promotion_Activity__c/fields/Activity_Spend_of_Customer_Budget__c.field-meta.xml
<CustomField>
    <fullName>Activity_Spend_of_Customer_Budget__c</fullName>
    <formula>IF(ISBLANK( Total_Customer_AP_Budget__c ), 1, (Activity_Budget__c / Total_Customer_AP_Budget__c)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Spend of Customer Budget</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>