force-app/main/default/objects/Promotion_Activity__c/fields/Brand_Strategy_Index__c.field-meta.xml
<CustomField>
    <fullName>Brand_Strategy_Index__c</fullName>
    <label>Brand Strategy Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>