force-app/main/default/objects/Promotion_Activity__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Premise__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bank Stores</fullName>
            </value>
            <value>
                <fullName>Bar/Nightclub</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Club Store</fullName>
            </value>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Conventional Liquor</fullName>
            </value>
            <value>
                <fullName>Dining</fullName>
            </value>
            <value>
                <fullName>Drug</fullName>
            </value>
            <value>
                <fullName>Drug/Convenience</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>ERC</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Large Liquor</fullName>
            </value>
            <value>
                <fullName>Large Superstore</fullName>
            </value>
            <value>
                <fullName>Liquor Superstore</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Lodging &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
            <value>
                <fullName>Off DH</fullName>
            </value>
            <value>
                <fullName>Off Modern</fullName>
            </value>
            <value>
                <fullName>Off Traditional</fullName>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other On-Premise</fullName>
            </value>
            <value>
                <fullName>Pub/Tavern</fullName>
            </value>
            <value>
                <fullName>Restaurant (Any)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>