force-app/main/default/objects/Promotion_Activity__c/fields/Channel_Comments__c.field-meta.xml
<CustomField>
    <fullName>Channel_Comments__c</fullName>
    <label>Channel Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>