force-app/main/default/objects/Promotion_Activity__c/fields/Commercial_Return_Index__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Return_Index__c</fullName>
    <label>Commercial Return Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>