force-app/main/default/objects/Promotion_Activity__c/fields/Customer_Relationship_Index__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship_Index__c</fullName>
    <label>Customer Relationship Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>