force-app/main/default/objects/Promotion_Activity__c/fields/Evaluation_BPA_Comments__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_BPA_Comments__c</fullName>
    <label>Evaluation BPA Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>