force-app/main/default/objects/Promotion_Activity__c/fields/Forecasted_Reach_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Reach_Coverage__c</fullName>
    <label>Forecasted Reach Coverage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>