force-app/main/default/objects/Promotion_Activity__c/fields/Incremental_9L_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Incremental_9L_Uplift__c</fullName>
    <label>Incremental 9L Uplift</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>