force-app/main/default/objects/Promotion_Activity__c/fields/Incremental_Discounts_Provided__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Discounts_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incremental Discounts Provided</label>
    <type>Checkbox</type>
</CustomField>