force-app/main/default/objects/Promotion_Activity__c/fields/Incremental_Gross_Profit_Sales__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Gross_Profit_Sales__c</fullName>
    <label>Incremental Gross Profit Sales</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>