force-app/main/default/objects/Promotion_Activity__c/fields/Incremental_Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Profit_Loss__c</fullName>
    <formula>Incremental_Gross_Profit__c -  Activity_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Profit Loss</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>