force-app/main/default/objects/Promotion_Activity__c/fields/Incremental_Profit_Loss_Sales__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Profit_Loss_Sales__c</fullName>
    <formula>Incremental_Gross_Profit_Sales__c - Activity_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Profit Loss Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>