force-app/main/default/objects/Promotion_Activity__c/fields/Incremental_ROI__c.field-meta.xml
<CustomField>
    <fullName>Incremental_ROI__c</fullName>
    <formula>IF( Activity_Budget__c == 0, 0,  (Incremental_Profit_Loss__c /  Activity_Budget__c)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental ROI</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>