force-app/main/default/objects/Promotion_Activity__c/fields/Last_Year_Activity_Details__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Activity_Details__c</fullName>
    <label>Last Year Activity Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>