force-app/main/default/objects/Promotion_Activity__c/fields/Nature_of_Cost_Details__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Cost_Details__c</fullName>
    <label>Nature of Cost Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>