force-app/main/default/objects/Promotion_Activity__c/fields/New_Experiential_Index__c.field-meta.xml
<CustomField>
    <fullName>New_Experiential_Index__c</fullName>
    <label>New Experiential Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>