force-app/main/default/objects/Promotion_Activity__c/fields/No_of_Stores_in_Banner_Running_Activity__c.field-meta.xml
<CustomField>
    <fullName>No_of_Stores_in_Banner_Running_Activity__c</fullName>
    <label>No. of Stores in Banner Running Activity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>