force-app/main/default/objects/Promotion_Activity__c/fields/Number_of_Stores_in_Banner_Group__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores_in_Banner_Group__c</fullName>
    <label>Number of Stores in Banner Group</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>