force-app/main/default/objects/Promotion_Activity__c/fields/PreAlignment_Deadline__c.field-meta.xml
<CustomField>
    <fullName>PreAlignment_Deadline__c</fullName>
    <label>PreAlignment Deadline</label>
    <type>Date</type>
</CustomField>