force-app/main/default/objects/Promotion_Activity__c/fields/PreEvaluation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>PreEvaluation_Deadline__c</fullName>
    <label>Pre-Evaluation Deadline</label>
    <type>Date</type>
</CustomField>