force-app/main/default/objects/Promotion_Activity__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities_ProjectManager</relationshipName>
    <type>Lookup</type>
</CustomField>