force-app/main/default/objects/Promotion_Activity__c/fields/Promo_Banner_Groups__c.field-meta.xml
<CustomField>
    <fullName>Promo_Banner_Groups__c</fullName>
    <label>Promo Banner Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>