force-app/main/default/objects/Promotion_Activity__c/fields/Promo_Products__c.field-meta.xml
<CustomField>
    <fullName>Promo_Products__c</fullName>
    <label>Promo Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jack Daniels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>