force-app/main/default/objects/Promotion_Activity__c/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <description>INFOWELDERS</description>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ad Hoc Display</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>BRA Events</fullName>
            </value>
            <value>
                <fullName>Budexpo</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>CAD-Competitive Activity</fullName>
            </value>
            <value>
                <fullName>CAD-JDBA</fullName>
            </value>
            <value>
                <fullName>CAD-On Premise</fullName>
            </value>
            <value>
                <fullName>CAD-Retail</fullName>
            </value>
            <value>
                <fullName>CZ OFF AH</fullName>
            </value>
            <value>
                <fullName>CZ OFF SP</fullName>
            </value>
            <value>
                <fullName>DEU-Barrel Ageing</fullName>
            </value>
            <value>
                <fullName>DEU-Depletion</fullName>
            </value>
            <value>
                <fullName>DEU-DrinkMenuAgreement</fullName>
            </value>
            <value>
                <fullName>DEU-Pouring</fullName>
            </value>
            <value>
                <fullName>DEU-Tailormade</fullName>
            </value>
            <value>
                <fullName>DEU-ZP</fullName>
            </value>
            <value>
                <fullName>Devolución IVA</fullName>
            </value>
            <value>
                <fullName>ESP - On Premise</fullName>
            </value>
            <value>
                <fullName>FRA-Secondary Placement</fullName>
            </value>
            <value>
                <fullName>FRA-Secondary Placement On</fullName>
            </value>
            <value>
                <fullName>LKA</fullName>
            </value>
            <value>
                <fullName>Local Promo</fullName>
            </value>
            <value>
                <fullName>Monedero Electrónico</fullName>
            </value>
            <value>
                <fullName>Multiahorro</fullName>
            </value>
            <value>
                <fullName>MX Centros de Consumo</fullName>
            </value>
            <value>
                <fullName>MX Degustaciones</fullName>
            </value>
            <value>
                <fullName>MX Descuentos</fullName>
            </value>
            <value>
                <fullName>MX Exhibiciones Ad</fullName>
            </value>
            <value>
                <fullName>MX Modern Tasting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>