force-app/main/default/objects/Promotion_Activity__c/fields/Smartsheet_Link__c.field-meta.xml
<CustomField>
    <fullName>Smartsheet_Link__c</fullName>
    <label>Smartsheet Link</label>
    <type>Url</type>
</CustomField>