force-app/main/default/objects/Promotion_Activity__c/fields/Total_Budgeted_Cost_LumpSum__c.field-meta.xml
<CustomField>
    <fullName>Total_Budgeted_Cost_LumpSum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Budgeted Cost (LumpSum)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>