force-app/main/default/objects/Promotion_Activity__c/fields/Total_Budgeted_Cost_PA__c.field-meta.xml
<CustomField>
    <fullName>Total_Budgeted_Cost_PA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Budgeted Cost (PA)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>