force-app/main/default/objects/Promotion_Activity__c/fields/Total_Customer_AP_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_AP_Budget__c</fullName>
    <label>Total Customer A&amp;P Budget</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>