force-app/main/default/objects/Promotion_Activity__c/fields/Total_Customer_Spend_of_SNS__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Spend_of_SNS__c</fullName>
    <formula>IF(ISBLANK(Total_Customer_SNS__c), 1, ( Activity_Budget__c / Total_Customer_SNS__c)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Customer Spend of SNS</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>