force-app/main/default/objects/Promotion_Activity__c/fields/Was_Activity_Running_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Was_Activity_Running_Last_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Activity Running Last Year</label>
    <type>Checkbox</type>
</CustomField>