force-app/main/default/objects/Promotion_Activity__c/recordTypes/CRM_Australia.recordType-meta.xml
<RecordType>
    <fullName>CRM_Australia</fullName>
    <active>true</active>
    <description>Promotion Activities for the Australian market</description>
    <label>CRM - Australia</label>
</RecordType>