force-app/main/default/objects/Promotion_Activity__c/recordTypes/Educational_Activity.recordType-meta.xml
<RecordType>
    <fullName>Educational_Activity</fullName>
    <active>true</active>
    <label>Educational Activity</label>
</RecordType>